# sentinel-execution

./: Cargo.toml  README.md  build.rs
.github/workflows/: docker-build.yml
proto/: execution.proto
src/: config.rs  main.rs
