# ========== DOSYA: sentinel-execution/Cargo.toml ==========
[package]
name = "sentinel-execution"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-nats = "0.34"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures-util = "0.3"

[build-dependencies]
prost-build = "0.12"